--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,42 @@
-Package            Version   
------------------- ----------
-2to3               1.0       
-appnope            0.1.0     
-asgiref            3.2.8     
-attrs              19.3.0    
-autopep8           1.5.3     
-backcall           0.2.0     
-certifi            2020.4.5.2
-click              7.1.2     
-coverage           5.1       
-decorator          4.4.2     
-Django             3.0.7     
-flake8             3.8.3     
-Flask              1.1.2     
-grin               1.2.1     
-importlib-metadata 1.6.1     
-ipython            7.15.0    
-ipython-genutils   0.2.0     
-itsdangerous       1.1.0     
-jedi               0.17.0    
-Jinja2             2.11.2    
-jsonschema         3.2.0     
-jupyter-core       4.6.3     
-jupytext           1.5.0     
-MarkupSafe         1.1.1     
-mccabe             0.6.1     
-more-itertools     8.4.0     
-msgpack            1.0.0     
-nbformat           5.0.7     
-packaging          20.4      
-pandoc             1.0.2     
-parso              0.7.0     
-pexpect            4.8.0     
-pickleshare        0.7.5     
-pip                19.3.1    
-pluggy             0.13.1    
-ply                3.11      
-prompt-toolkit     3.0.5     
-ptyprocess         0.6.0     
-py                 1.8.2     
-pycodestyle        2.6.0     
-pycscope           1.2.1     
-pydocstyle         5.0.2     
-pyflakes           2.2.0     
-Pygments           2.6.1     
-pylama             7.7.1     
-pyparsing          2.4.7     
-pyperclip          1.8.0     
-pyrsistent         0.16.0    
-pytest             5.4.3     
-pytz               2020.1    
-PyYAML             5.3.1     
-setuptools         42.0.2    
-six                1.15.0    
-snowballstemmer    2.0.0     
-sqlparse           0.3.1     
-toml               0.10.1    
-traitlets          4.3.3     
-urllib3            1.25.9    
-wcwidth            0.2.4     
-Werkzeug           1.0.1     
-wheel              0.34.2    
-yapf               0.30.0    
-zipp               3.1.0     
+Package            Version
+------------------ -------
+appdirs            1.4.4  
+appnope            0.1.0  
+attrs              19.3.0 
+autopep8           1.5.3  
+backcall           0.2.0  
+click              7.1.2  
+decorator          4.4.2  
+docopt             0.6.2  
+flake8             3.8.3  
+importlib-metadata 1.6.1  
+ipython            7.15.0 
+ipython-genutils   0.2.0  
+jedi               0.17.1 
+mccabe             0.6.1  
+msgpack            1.0.0  
+pandoc             1.0.2  
+parso              0.7.0  
+pathspec           0.8.0  
+pexpect            4.8.0  
+pickleshare        0.7.5  
+pip                19.3.1 
+ply                3.11   
+prompt-toolkit     3.0.5  
+ptyprocess         0.6.0  
+pycodestyle        2.6.0  
+pydocstyle         5.0.2  
+pyflakes           2.2.0  
+Pygments           2.6.1  
+pylama             7.7.1  
+pynvim             0.4.1  
+pyperclip          1.8.0  
+pyvim              3.0.2  
+setuptools         42.0.2 
+six                1.15.0 
+snowballstemmer    2.0.0  
+toml               0.10.1 
+traitlets          4.3.3  
+wcwidth            0.2.4  
+yapf               0.30.0 
+zipp               3.1.0  
