--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+Django==3.0.7
+Flask==1.1.2
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+PyYAML==5.3.1
+Pygments==2.6.1
+Werkzeug==1.0.1
 appnope==0.1.0
 asgiref==3.2.10
 attrs==19.3.0
@@ -5,21 +12,19 @@ autopep8==1.5.3
 backcall==0.2.0
 click==7.1.2
 decorator==4.4.2
-Django==3.0.7
-Flask==1.1.2
+flake8==3.8.3
 importlib-metadata==1.6.1
-ipython==7.15.0
 ipython-genutils==0.2.0
+ipython==7.16.1
 itsdangerous==1.1.0
 jedi==0.17.1
-Jinja2==2.11.2
 jsonschema==3.2.0
 jupyter-core==4.6.3
 jupytext==1.5.0
-MarkupSafe==1.1.1
 mccabe==0.6.1
 msgpack==1.0.0
 nbformat==5.0.7
+neovim==0.3.1
 pandoc==1.0.2
 parso==0.7.0
 pexpect==4.8.0
@@ -30,17 +35,15 @@ ptyprocess==0.6.0
 pycodestyle==2.6.0
 pydocstyle==5.0.2
 pyflakes==2.2.0
-Pygments==2.6.1
 pylama==7.7.1
+pynvim==0.4.1
 pyrsistent==0.16.0
 pytz==2020.1
-PyYAML==5.3.1
 six==1.15.0
 snowballstemmer==2.0.0
 sqlparse==0.3.1
 toml==0.10.1
 traitlets==4.3.3
 wcwidth==0.2.5
-Werkzeug==1.0.1
 yapf==0.30.0
 zipp==3.1.0
