--- a/requirements.txt
+++ b/requirements.txt
@@ -22,22 +22,28 @@ jsonschema==3.2.0
 jupyter-core==4.6.3
 jupytext==1.5.0
 mccabe==0.6.1
+more-itertools==8.4.0
 msgpack==1.0.0
 nbformat==5.0.7
 neovim==0.3.1
+packaging==20.4
 pandoc==1.0.2
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 ply==3.11
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+py==1.9.0
 pycodestyle==2.6.0
 pydocstyle==5.0.2
 pyflakes==2.2.0
 pylama==7.7.1
 pynvim==0.4.1
+pyparsing==2.4.7
 pyrsistent==0.16.0
+pytest==5.4.3
 pytz==2020.1
 six==1.15.0
 snowballstemmer==2.0.0
