--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ mccabe==0.6.1
 more-itertools==8.4.0
 msgpack==1.0.0
 nbformat==5.0.7
+neovim==0.3.1
 packaging==20.4
 parso==0.7.0
 pexpect==4.8.0
